feat: NMS-API導入でNMS関連の処理に対応